@@ -33,11 +33,14 @@ interface:
 - added method SCIPgetNCliquesCreated() which returns the number of cliques created so far
 - unify handling of objective limit by only using one parameter and not distinguishing w.r.t. lower and upper limits
 - replaced LPI parameters SCIP_LPPAR_LOBJLIM and SCIP_LPPAR_UOBJLIM by SCIP_LPPAR_OBJLIM
+- removed argument "includeslp" from SCIPrelaxCreate() and added it to SCIPmarkRelaxSolValid(), SCIPsetRelaxSolVals() and
+  SCIPsetRelaxSolValsSol()
 
 performance improvements:
 - use disjoint set to reduce peak memory usage and time to compute of clique table connectedness information
 - add and use RESTRICT macro for some pointers
 - improved the implementation of SCIPvarGetActiveRepresentatives
+- removed bestrelaxsol and directly access relaxation solution instead to decrease overhead when using relaxation handlers
 
 fixed bugs:
 - fixed bug in feasibility pump heuristic when switching on the usefp20 parameter
